webirc/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webirc
  labels:
    app: webirc
spec:
  selector:
    matchLabels:
      app: webirc
  template:
    metadata:
      labels:
        app: webirc
    spec:
      containers:
      - name: webirc
        image: hashbang/webirc
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        volumeMounts:
        - name: kiwiirc-config
          mountPath: /usr/share/nginx/html/static/config.json
          subPath: config.json
      volumes:
      - name: kiwiirc-config
        configMap:
          name: kiwiirc-config
---
apiVersion: v1
kind: Service
metadata:
  name: webirc
  labels:
    app: webirc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: webirc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webirc-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.kubernetes.io/hostname: webirc.hashbang.sh
spec:
  ingressClassName: nginx
  rules:
  - host: webirc.hashbang.sh
    http:
      paths:
      - backend:
          service:
            name: webirc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - webirc.hashbang.sh
    secretName: webirc-tls
