webirc/networkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: deny-egress
spec:
  endpointSelector:
    matchLabels:
      k8s:app: webirc
  egress:
  - {}
